Fix double scrollbar for activity-editor and activity-designer

--- a/src/app/processes/activity-designer/activity-designer.component.scss
+++ b/src/app/processes/activity-designer/activity-designer.component.scss
@@ -1,5 +1,5 @@
 @import "../../../styles/card";
 
-.card-body {
-
+.wide-margin {
+  margin-bottom: 140px;
 }
